
For editing language files in The Conquerors, I recommend [url=http://aok.heavengames.com/blacksmith/showfile.php?fileid=10819]this download[/url].[/color]

[b]Version History[/b]
Guide makers et cetera, please include the version into which your guide was written.

Version [b]2016.3.2[/b]:
-SLP view now tolerates incorrect graphic data.
-Old font size restored.

Version [b]2016.2.24[/b]:
-Fixed referenced techs for AoE and RoR.
-Improved layout all around.

Version [b]2016.2.21[/b]:
-Text scaling should work better now.
-SLP view controls reactivated.

Version [b]2016.2.18[/b]:
-Refreshing a list no longer resets its selection.
-Improved search algorithm.

Version [b]2016.2.14[/b]:
-Unit search filters work again.

Version [b]2016.2.10[/b]:
-SLP view improved.
-Game path can be read from registry.
-Pressing control + 1...4 changes focus between editors.
-Civilization resource names are customizable via text file.
-Added a button to sync save paths with open paths.

Version [b]2016.1.24[/b]:
-New lines handled properly when editing language DLL files.
-User interface fixes and improvements.

Version [b]2016.1.20[/b]:
-Multiple renames in the user interface of units and techs.
-SLP based terrains can be shown in the SLP view.

Version [b]2015.12.27[/b]:
-Unit size shapes can be viewed in the SLP view.

Version [b]2015.12.17[/b]:
-Improved SLP view when stack option is unchecked.
-Fixed black shadows on saved SLPs.

Version [b]2015.12.11[/b]:
-Added copy sounds from civ to civ button to sounds tab.
-Added an option to merge shadow from another SLP.

Version [b]2015.12.2[/b]:
-Terrain restriction tab updated.

Version [b]2015.11.26[/b]:
-Renamed enable/disable buttons.
-Added a button to enable automatic backups.
-Added new handy buttons to sounds tab.

Version [b]2015.11.24[/b]:
-New/better information here and there.

Version [b]2015.11.18[/b]:
-Terrain restriction names customizable.
-Updates for Age of Empires 1.

Version [b]2015.11.16[/b]: