@@ -18,7 +18,8 @@ public:
     vector<size_t> indexes;
 
 private:
-    virtual wxString OnGetItemText(long item, long column) const;
+    wxString OnGetItemText(long item, long column) const;
+    //wxListItemAttr* OnGetItemAttr(long item) const; <-- does not work
 };
 
 class AGELinkedBox
