@@ -1,0 +1,33 @@
+static const char *Reselection_xpm[] = {
+"25 25 5 1",
+"  c #000000",
+". c #7A7A7A",
+"X c #3399FF",
+"o c #F0F0F0",
+"O c #FFFFFF",
+".........................",
+".OOOOOOOOOOO.XXXXXXXXXXX.",
+".OOOOOOOOOOO.XXXXXXXXXXX.",
+".XXXXXXXXXXX.ooooooooooo.",
+".XXXXXXXXXXX.ooooooooooo.",
+".XXXXXXXXXXX.OOOOOOOOOOO.",
+".XXXXXXXXXXX.OOOOOOOOOOO.",
+".ooooooooooo.ooooooooooo.",
+".ooooooooooo.ooooooooooo.",
+".OOOOOOOOOOO.OOOOOOOOOOO.",
+".OOOOOOOOOOO.OOOOOOOOOOO.",
+".XXXXXXXXXXX.ooooooooooo.",
+".XXXXXXXXXXX.ooooooooooo.",
+".OOOOOOOOOOO.OOOOOOOOOOO.",
+".OOOOOOO  OO.OO  OOOOOOO.",
+".oooooo  ooo.ooo  oooooo.",
+".ooooo  oooo.oooo  ooooo.",
+".OOOO               OOOO.",
+".OOOO               OOOO.",
+".ooooo  oooo.oooo  ooooo.",
+".oooooo  ooo.ooo  oooooo.",
+".OOOOOOO  OO.OO  OOOOOOO.",
+".OOOOOOOOOOO.OOOOOOOOOOO.",
+".OOOOOOOOOOO.OOOOOOOOOOO.",
+"........................."
+};
